# gtstore

./: .gitignore  batch_put.sh  client.sh  run.sh  script.sh  start_service.sh  test1.sh  test2.sh  test3.sh  timed_get_put.sh
src/: CMakeLists.txt  client.cpp  gtstore.hpp  manager.cpp  storage.cpp
src/proto/: demo.proto  gtstore.hpp
